--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="_static/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="_static/css/simple-sidebar.css" rel="stylesheet">
-    <link href="_static/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="_static/js/google-code-prettify/prettify.css" rel="stylesheet">
-    <script src="_static/js/jquery.js"></script>
-    <script src="_static/js/bootstrap.js"></script>
-    <script src="_static/js/google-code-prettify/prettify.js"></script>
+    <link href="assets/css/simple-sidebar.css" rel="stylesheet">
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/google-code-prettify/prettify.js"></script>
     <script>
 
 
