--- a/index.html
+++ b/index.html
@@ -67,11 +67,23 @@
 			<ul class="sidebar-nav">
 				<li class="sidebar-brand"><a href="test.html">Documentation</a></li>
 				<li><a href="docs/functions/get_content.html">Basics</a></li>
-				 
 				<li><a href="test.html">Services</a></li>
-				<li><a href="test.html">Functions</a>
+				<li><a href="test.html">Functions</a></li>
+				<li><a href="test.html">Content</a>
 					<ul>
 						<li><a href="docs/functions/get_content.html">get_content</a></li>
+					</ul>
+				</li>
+				<li><a href="test.html">Custom fields</a>
+					<ul>
+						<li><a href="docs/functions/get_custom_fields.html">get_custom_fields</a></li>
+						<li><a href="docs/functions/save_custom_field.html">save_custom_field</a></li>
+					</ul>
+				</li>
+				
+				<li><a href="test.html">Modules</a>
+					<ul>
+						<li><a href="docs/modules/pictures.html">pictures</a></li>
 					</ul>
 				</li>
 			</ul>
